<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/testField"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/my_dimension"
            android:background="#534378"
            android:text="@string/hello_world"
            android:textColor="#FBFBFB"
            android:textSize="22sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_dimension"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="Сюда можно ввести имя"
            android:inputType="textPersonName"
            android:textSize="24sp"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/my_dimension"
            android:text="@string/test_button" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/my_dimension"
            android:text="@string/change_colour" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/my_dimension"
            android:onClick="checkBoxListener"
            android:text="@string/light_off" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/my_dimension"
            android:onClick="toggleButtonListener"
            android:text="@string/toggle" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>